src/objects/Driver__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DriverId__c</fullName>
        <label>Driver Id</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FIASuperLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FIA Super License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nationality__c</fullName>
        <label>Nationality</label>
        <picklist>
            <picklistValues>
                <fullName>British</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazilian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShortName__c</fullName>
        <label>Short Name</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Drivers</relationshipLabel>
        <relationshipName>Drivers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <externalId>true</externalId>
        <label>Twitter Handle</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Driver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>